--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -18,4 +18,4 @@ jobs:
 
       - run: npm run eslint-check
       - run: npm run type-check
-      - run: npm run prettier-check
+      - run: npm run pritter-check
